<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="20dp">

        <EditText
            android:id="@+id/input_title"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/input_content"
            android:layout_width="match_parent" android:layout_height="160dp"
            android:gravity="top"
            android:hint="@string/note_prompt"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/input_tags"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/tag" android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
